--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,24 +1,15 @@
-FROM ubuntu:24.04
+FROM ubuntu:22.04
 
-# Non-interactive untuk install otomatis
+# Set timezone (opsional)
 ENV DEBIAN_FRONTEND=noninteractive
-
-# Update dan install paket dasar
-RUN apt update && \
-    apt install -y \
+RUN apt-get update && apt-get install -y \
     sudo \
     curl \
     git \
-    wget \
     vim \
     build-essential \
-    libssl3 \
-    ca-certificates \
-    openssh-client \
-    gnupg2 && \
-    rm -rf /var/lib/apt/lists/*
-
-# Tambahkan user vscode (harus sesuai dengan remoteUser di devcontainer.json)
-RUN useradd -m -s /bin/bash vscode && \
-    echo "vscode ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+    software-properties-common \
+    python3 \
+    python3-pip \
+    && rm -rf /var/lib/apt/lists/*
     
