--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,10 @@
 {
-  "name": "Ubuntu 22.04 Dev",
+  "name": "Ubuntu 22.04 with root access",
   "build": {
     "dockerfile": "Dockerfile"
   },
   "settings": {
-    "terminal.integrated.shell.linux": "/bin/bash"
+    "terminal.integrated.defaultProfile.linux": "bash"
   },
-  "features": {},
-  "postCreateCommand": "echo 'Welcome to Ubuntu 22.04 environment!'",
   "remoteUser": "root"
 }
