--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,15 +1,10 @@
 FROM ubuntu:22.04
 
-# Set timezone (opsional)
-ENV DEBIAN_FRONTEND=noninteractive
+# Install tools (bebas ditambah sesuai kebutuhan)
 RUN apt-get update && apt-get install -y \
-    sudo \
     curl \
     git \
+    sudo \
     vim \
     build-essential \
-    software-properties-common \
-    python3 \
-    python3-pip \
     && rm -rf /var/lib/apt/lists/*
-    
