--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,6 +2,7 @@ FROM ubuntu:22.04
 
 # Install tools (bebas ditambah sesuai kebutuhan)
 RUN apt-get update && apt-get install -y \
+    libssl3 \
     curl \
     git \
     sudo \
